# firthlogist

./: .flake8  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
firthlogist/: __init__.py  firthlogist.py
firthlogist/datasets/: endometrial.csv
firthlogist/tests/: sex2.csv  test_firthlogist.py
