[tool.poetry]
name = "firthlogist"
version = "0.5.0"
description = "Python implementation of Logistic Regression with Firth's bias reduction"
authors = ["Jon Luo <jzluo@alumni.cmu.edu>"]
repository = "https://github.com/jzluo/firthlogist"
readme = "README.md"
license = "MIT"
include = [
    "LICENSE"
]
classifiers = [
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.22.4"
scikit-learn = "^1.1.1"
tabulate = "^0.8.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pandas = "^1.4.2"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
